[gd_scene load_steps=3 format=3 uid="uid://uxh4tk6ptv5p"]

[ext_resource type="Script" path="res://addons/PlanetEditor/subeditors/vector2_input.gd" id="1_fd8wi"]
[ext_resource type="PackedScene" uid="uid://dt2p0v584t236" path="res://addons/PlanetEditor/subeditors/float_input.tscn" id="2_h34oi"]

[node name="Vector2Input" type="HBoxContainer"]
script = ExtResource("1_fd8wi")
is_aspect_editable = true

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="X" parent="." instance=ExtResource("2_h34oi")]
layout_mode = 2
label = "x:"

[node name="Y" parent="." instance=ExtResource("2_h34oi")]
layout_mode = 2
label = "y:"

[node name="IsAspect" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
toggle_mode = true
ignore_texture_size = true
stretch_mode = 5

[connection signal="value_changed" from="X" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Y" to="." method="_on_y_value_changed"]
